# SCR-SWC-22

./: .gitignore  README.md  competition.cfg  simulator.cfg
Unity/Assets/Materials/: FootballField.mat  water.mat  waypoint_orange.mat
Unity/Assets/Prefabs/: Waypoint.prefab
Unity/Assets/RosSharpMessages/Swc/msg/: Control.cs  GPS.cs
Unity/Assets/RosSharpMessages/Swc/srv/: WaypointsRequest.cs  WaypointsResponse.cs
Unity/Assets/RosSharpModules/: ControlSubscriber.cs  GPSPublisher.cs  IMUPublisher.cs  LinearVelocityPublisher.cs  VelocityPublisher.cs  WaypointsServiceProvider.cs
Unity/Assets/Scenes/: Loading.unity  MainScene.unity  MainSceneSettings.lighting
Unity/Assets/Scenes/MainScene/: LightingData.asset
Unity/Assets/Scripts/: BoatController.cs  ConfigLoader.cs  GameManager.cs  HealthController.cs  UICanvas.cs  Waypoint.cs
Unity/Assets/SeansWater/Images/Materials/: SeansWaterPreview.mat  Water1.mat  Water3.mat
Unity/Assets/TextMesh Pro/Resources/Fonts & Materials/: LiberationSans SDF - Fallback.asset
Unity/ProjectSettings/: ProjectSettings.asset
Unity/UserSettings/: EditorUserSettings.asset
Unity/UserSettings/Layouts/: default-2021.dwlt
swc_ws/src/demo_pkg/: package.xml  setup.cfg  setup.py
swc_ws/src/demo_pkg/launch/: demo_launch.xml
swc_ws/src/demo_pkg/src/: demo_node.py
swc_ws/src/swc_msgs/: CMakeLists.txt  package.xml
swc_ws/src/swc_msgs/msg/: Control.msg
swc_ws/src/swc_msgs/srv/: Waypoints.srv
